Fix menu z-index, print demo cards for development purposes, add center global class

--- a/app/src/components/styles/Menu.css
+++ b/app/src/components/styles/Menu.css
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  z-index: 10000;
 }
 
 .nav ul {
